[package]
name = "lichess-board-api-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.3.1"
env_logger = "0.10.0"
futures-util = "0.3.26"
log = "0.4.17"
oauth2 = "4.3.0"
reqwest = { version = "0.11.14", features = ["stream"] }
serde_json = "1.0.93"
shakmaty = "0.23.0"
tokio = { version = "1.25.0", features = ["full"] } # for our async runtime
